css/style.css
* {
    margin: 0;
    padding: 0;
    max-width: 100%;
    box-sizing: border-box;
    font-family: 'Raleway', sans-serif;
}



body {
    
    justify-content: center;
    align-items: center;
    
}

hr {
   width: 100%;
   border-radius: 25px;
   border: 2px solid #2E284A;
}

/* HERO SECTION */

.hero-container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    align-items: center;
    justify-self: center;
    width: 100%;
    margin: 0 auto;
    height:800px;
    background-image: url("https://images.pexels.com/photos/2719301/pexels-photo-2719301.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;   
}

.hvr-icon-hang {
    display:flex;
    position: relative;
    height: 100%;
    justify-content: center;
    margin-top: 20px;  
}
.hero-content {
    color: #fafafa;
    text-align: center;
    margin-right: 50px;
   
}
.hero-content h1 {
    font-weight: 700;
}

/* SERVICES */
.services-head {
    display: flex;
    text-align: center;
    justify-content: center;
    align-items: center;
    font-weight: 700;
    padding: 50px;
    color: #2E284A;
    text-shadow: #CB5893 1px 1px 25px;
    text-decoration: none;   
}

a {
text-decoration: none;
color: #fafafa;
}

a::after {
    text-decoration: none;
    color: #fafafa;
    }

.services-container {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    padding: 40px 0;
    background: #2E284A;
    height: 100vh
}
.services-container .services-card {
    position: relative;
    width: 420px;
    height: 250px;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: 0.5s ease;
    margin: 50px;
}
.services-container .services-card::before{
    content: '';
    position: absolute;
    top: 0;
    left: 50px;
    width: 70%;
    height: 90%;
    border-radius:30% 70% 70% 30% / 30% 27% 73% 70%;
    transform: skewX(0deg);
    background: #D6639E;
    transition: 0.3s;
}
.services-container .services-card::after{
    content: '';
    position: absolute;
    top: 0;
    left: 50px;
    width: 50%;
    height: 100%;
    border-radius: 30% 70% 70% 30% / 30% 27% 73% 70% ;
    transform: skewX(0deg);
    background: #D6639E;
    transition: 0.5s;
    filter: blur(30px);
}
.services-container .services-card:hover:before, 
.services-container .services-card:hover:after{
   transform: skewX(10deg);
   left: -10px;
   width: calc(100% - 150px);
}
.services-container .services-card:nth-child(1):before, 
.services-container .services-card:nth-child(1):after{
    background: #FC5C7D;  /* fallback for old browsers */
background: -webkit-linear-gradient(to right, #6A82FB, #FC5C7D 0.7);  /* Chrome 10-25, Safari 5.1-6 */
background: linear-gradient(to right, #6A82FB, #FC5C7D ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
}
.services-container .services-card:nth-child(2):before, 
.services-container .services-card:nth-child(2):after{
    background: #4CB8C4;  /* fallback for old browsers */
    background: -webkit-linear-gradient(to right, #3CD3AD, #4CB8C4);  /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(to right, #3CD3AD, #4CB8C4 ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
    
}
.services-container .services-card:nth-child(3):before, 
.services-container .services-card:nth-child(3):after{
    background: #1D2B64;  /* fallback for old browsers */
    background: -webkit-linear-gradient(to right, #F8CDDA, #1D2B64);  /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(to right, #F8CDDA, #1D2B64); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
}
 .services-content {
    position: relative;
    z-index: 999;
    color: #fafafa;
    padding: 20px 40px;
    background: rgba(255,255,255,0.1);
    box-shadow: 0 5px 15px rgba(0,0,0,0.2);
    width: 300px;
    height: 250px; 
    margin-top: 100px;
    margin-bottom: 100px;
    align-items: center;
    justify-content: center;
    display: flex;
    flex-wrap: wrap;
    font-size: 1rem;
    border-radius: 10px;
    text-shadow: #2C2749 1px 1px 5px;
}
.services-content h2 {
    font-size:1.5rem;
    font-weight: 500;
    justify-content: center;
    width: 100%;
}
/* About */
.about-container {
    display:flex;
    flex-wrap: wrap;
    margin-top: 50px;  
}
.about-img-container {
    position: relative;
    display: flex;
    border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
    width: 50%;
    height: 70%;
    margin-left: 50px;   
}
.about-img-container img { 
    border-radius: 75% 25% 70% 30% / 37% 30% 70% 63% ;
}
.about-img-container::after {
        content: '';
        position: relative;
        top:0;
        left:0;
        width:100%;
        height:110%;
        background: #5f2c82;  /* fallback for old browsers */
        background: -webkit-linear-gradient(to right, #49a09d, #D976A9, #2E284A);  /* Chrome 10-25, Safari 5.1-6 */
        background: linear-gradient(to right, #D976A9, #2E284A); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
        border-radius:  25% 70% 30% / 37% 30% 70% 63%;
        opacity: .55;
        display: flex;
        max-width: 800px;
        position: absolute;
        justify-content: center;
        align-items: center;
        overflow: visible;
    }
    .about-content h2 {
        font-size: 2rem;
        font-weight: bold;
        justify-content: center;
        align-items: center;
        background: #16BFFD;  /* fallback for old browsers */
        background: -webkit-linear-gradient(to right, #CB3066, #16BFFD);  /* Chrome 10-25, Safari 5.1-6 */
        background: linear-gradient(to right, #CB3066, #16BFFD); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
        -webkit-background-clip: text;
        background-clip: text;
        -webkit-text-fill-color: transparent;
        text-transform: uppercase;
    }
    .about-content {
        display: flex;
        width:40%;
        flex-wrap: inherit;
        font-size: 1.3rem;
        justify-content: center;
        text-align: center;
        margin-top: 50px;
        margin-left: 20px;
    }
 #icons {
     justify-content: center;
     align-items: center;
     position: relative;
     width: 80px;
     height: 80px;
     margin-top: 60px;
     margin: 20px;
     display: inline;
 }


/* CONTACT */

.form-container {
    display: inline-block;
    flex-direction: column;
    width: 45vw;
    margin-left: 100px;
    height: 70vh;
    padding-bottom: 10px;
    /*  background-image: url("https://images.pexels.com/photos/2719301/pexels-photo-2719301.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"); */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;   
    float: left;
    
}
.form-fields {
    width: 60vw;
    margin-top: 30px;
    margin-bottom: 30px;
    height: 8%;
    border: none;
    border-bottom: 1px solid #3c3a3a;
    /* background-image: url("https://images.pexels.com/photos/2719301/pexels-photo-2719301.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"); */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;   
    color: white;
     
}

.contact-details {
    display: inline-block;
    flex-direction: column;
    margin-left: 100px;
    width: 30vw;
    height: 60%;
    float: left;
    
    
    
}



textarea {
    /*height: 250px */
}


/* Services Page */

.content {
    display: flex;
    justify-content: center;
    text-align: center;
    flex-direction: column;
    color: #3c3a3a;
   padding-left: 40px;    
}
.content i {
    margin-top: 50px;
}
#webdev {
   background-color: #7C7EEC;  
}
#marketing {
   background-color: #55D3B9;
}
#socialmedia {
    background-color: #C26A98;
}
.content a {
    text-decoration: none;
}


/* Footer */
footer {
    height: 100px; 
    display: inline-block; 
}
.social-links {
    text-align: center;
    list-style: none;
    display: flex;
    justify-content: center;
    margin-top: 50px;    
}
.social-links a:hover {
    border-bottom: 6px solid;
    padding-bottom: 40px;
    animation-duration: .5s;   
    box-shadow: 1px 1px 5px;
    border-radius: 25px;
    padding-top: 40px;
}
#spotify {
    border-color: #3ECFAF;
}
#youtube {
    border-color: #DE75A6;
}
#linkedin{
    border-color: #767FF0;
}
.footer-copyright {
    display: inline-block;
    justify-content: center;
    text-align: center;
    padding-bottom: 50px;
    padding-top: 10px;
}

/* MEDIA QUERIES */
@media screen and (max-width:1080px) {
    .about-content {
        width: 100%;
        margin-top: 50px;
    }
    .about-img-container {
        width: 100%;
        padding-right: 100px;
        margin-top: 10px;
    }
    .services-container {
        height: 1100px;
    }
}

@media screen and (max-width:560px){
    .content h2, p {
        align-items: center;
        text-align: center;
        margin-top: 40px;
        margin-bottom: -20px;
        
    }
    
}

